[gd_scene load_steps=2 format=3 uid="uid://pause_menu_scene"]

[ext_resource type="Script" path="res://scripts/ui/PauseMenu.gd" id="1_pause"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
process_mode = 3
script = ExtResource("1_pause")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.7)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -140.0
offset_right = 160.0
offset_bottom = 140.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TitleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "‚è∏Ô∏è PAUSA"
horizontal_alignment = 1

[node name="Separator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 10.0
offset_top = 70.0
offset_right = 310.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.7, 0.7, 0.8, 1)
text = "Tiempo: 00:00"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "‚ñ∂Ô∏è  Continuar"

[node name="OptionsButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "‚öôÔ∏è  Opciones"

[node name="QuitButton" type="Button" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(200, 45)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "üè†  Men√∫ Principal"
